--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -97,6 +101,10 @@
       </div>
     </footer>
 
+    <button class="scroll-to-top btn bg-dark text-white rounded-circle">
+      <span class="material-icons"> keyboard_arrow_up </span>
+    </button>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
@@ -108,6 +116,7 @@
     <script src="sections/CurrentWeather.js"></script>
     <script src="sections/ChoseLocation.js"></script>
     <script src="sections/ForecastWeather.js"></script>
+    <script src="sections/ScrollToTopButton.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
